Bug 1504230 - check for failure in GetFontKeyForScaledFont when building blobs. r=jrmuizel