gfx/layers/wr/RenderRootStateManager.cpp
@@ -204,12 +204,12 @@ void RenderRootStateManager::ReleaseTextureOfImage(const wr::ImageKey& aKey) {
   WrBridge()->ReleaseTextureOfImage(aKey);
 }
 
-wr::FontInstanceKey RenderRootStateManager::GetFontKeyForScaledFont(
+Maybe<wr::FontInstanceKey> RenderRootStateManager::GetFontKeyForScaledFont(
     gfx::ScaledFont* aScaledFont, wr::IpcResourceUpdateQueue* aResources) {
   return WrBridge()->GetFontKeyForScaledFont(aScaledFont, aResources);
 }
 
-wr::FontKey RenderRootStateManager::GetFontKeyForUnscaledFont(
+Maybe<wr::FontKey> RenderRootStateManager::GetFontKeyForUnscaledFont(
     gfx::UnscaledFont* aUnscaledFont, wr::IpcResourceUpdateQueue* aResources) {
   return WrBridge()->GetFontKeyForUnscaledFont(aUnscaledFont, aResources);
 }
